--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 /* Style the body */
 body {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  line-height: 1.5;
   margin: 0;
 }
 
@@ -129,7 +131,7 @@ body {
 <div class="row">
   <div class="side">
     <h2>Contact Us</h2>
-    <p>For all your queries relating to the processing of remote sensing data or access to data that is available for your area of interest, please contact us and we will be very happy to get in contact with you.</p> 
+    <p>For all your queries relating to the processing of remote sensing data or data availability, please contact us.</p> 
     <h5>info@mondoscope.com</h5>
   </div>
 
@@ -137,24 +139,24 @@ body {
   <div class="main">
     <h2>Radiative transfer simulation</h2>
     <h5>Synthetic image generation, March 20, 2021</h5>
-    <a href="https://github.com/martinvanleeuwen/RenderJay.jl" target="_blank"><img src="./img/wytham.png" alt="Wytham Woods" height="300"></a>
+    <a href="https://github.com/martinvanleeuwen/RenderJay.jl" target="_blank"><img src="./img/wytham.png" alt="Wytham Woods" height="500"></a>
     <p>For the simulation of synthetic imagery, especially imaging spectroscopy data cubes, we are pleased to announce RenderJay, a new module for the Julia ecosystem.</p>
 
     <br>
     <h2>Data assimilation</h2>
     <h5>Daily bi-hemispherical reflectance in the near-infrared, March 20, 2021</h5>
-    <a href="https://www.youtube.com/watch?v=ZveP5Kt2Y3U" target="_blank"><img src="./img/albedo.png" alt="MODIS NIR albedo" width="300"></a>
+    <a href="https://www.youtube.com/watch?v=ZveP5Kt2Y3U" target="_blank"><img src="./img/albedo.png" alt="MODIS NIR albedo" width="500"></a>
     <p>Check out or daily MODIS albedo product. This product comes with associated confidence intervals and we have derived a suite of vegetation products from it, using the Joint Research Centre's Two-Stream Inversion package. Contact us for data availability for your area of interest!</p>
 
     <br>
     <h5>Daily JRC-TIP eLAI, March 22, 2021</h5>
-    <a href="https://www.youtube.com/watch?v=4dRBEW4uw9M" target="_blank"><img src="./img/elai.png" alt="JRC-TIP eLAI" width="300"></a>
+    <a href="https://www.youtube.com/watch?v=4dRBEW4uw9M" target="_blank"><img src="./img/elai.png" alt="JRC-TIP eLAI" width="500"></a>
     <p>The effective Leaf Area Index using the Joint Research Centre's Two-Stream Inversion package, that we rewrote in Julia, enabling the use of Julia's handy auto-derivation tools for fast optimization. Contact us for data availability and any further details that you may be interested in.</p>
 
     <br>
     <h2>Generating virtual landscapes</h2>
-    <h5>a small Python functionality to generate pleasing landscape patterns, March 23, 2021</h5>
-    <img src="./img/lg.png" alt="Landscape generation" width="300"></a>
+    <h5>A small Python functionality to generate pleasing landscape patterns, March 23, 2021</h5>
+    <img src="./img/lg.png" alt="Landscape generation" width="500"></a>
     <p>To advance the study of spectral mixing and the potential of imaging spectroscopy to assess biodiversity, we developed a small yet handy landscape generator that produces species compositions on a two-dimensional map, including understorey and overstorey vegetation. You can find an application in our recent paper in Remote Sensing of Environment (<a href="https://doi.org/10.1016/j.rse.2021.112405">https://doi.org/10.1016/j.rse.2021.112405</a>) and we will release this code on GitHub soon. In the meantime, please, contact us if you are interested.</p>
 
   </div>
