--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@ body {
     float: none;
     width: 100%;
   }
+  .side {
+    -ms-flex: 100%; /* IE10 */
+    flex: 100%;
+  }
+  .main {   
+    -ms-flex: 100%; /* IE10 */
+    flex: 100%;
+  }
 }
 </style>
 </head>
