--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ body {
 @media screen and (max-width: 600px) {
   .row {   
     flex-direction: column;
+    max-width: 100%;
   }
   .navbar a {
     float: none;
