--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@ body {
   background: #ddd;
 }
 
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+/* Responsive layout - when the screen is less than 400px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
   .row {   
     flex-direction: column;
-    max-width: 100%;
+    max-width: 400px;
   }
 }
 </style>
