--- a/index.html
+++ b/index.html
@@ -131,24 +131,24 @@ body {
   <div class="main">
     <h2>Radiative transfer simulation</h2>
     <h5>Synthetic image generation, March 20, 2021</h5>
-    <a href="https://github.com/martinvanleeuwen/RenderJay.jl" target="_blank"><img src="./img/wytham.png" alt="Wytham Woods" height="400"></a>
+    <a href="https://github.com/martinvanleeuwen/RenderJay.jl" target="_blank"><img src="./img/wytham.png" alt="Wytham Woods" width="100%"></a>
     <p>For the simulation of synthetic imagery, especially imaging spectroscopy data cubes, we are pleased to announce RenderJay, a new module for the Julia ecosystem.</p>
 
     <br>
     <h2>Data assimilation</h2>
     <h5>Daily bi-hemispherical reflectance in the near-infrared, March 20, 2021</h5>
-    <a href="https://www.youtube.com/watch?v=ZveP5Kt2Y3U" target="_blank"><img src="./img/albedo.png" alt="MODIS NIR albedo" width="400"></a>
+    <a href="https://www.youtube.com/watch?v=ZveP5Kt2Y3U" target="_blank"><img src="./img/albedo.png" alt="MODIS NIR albedo" width="100%"></a>
     <p>Check out or daily MODIS albedo product. This product comes with associated confidence intervals and we have derived a suite of vegetation products from it, using the Joint Research Centre's Two-Stream Inversion package. Contact us for data availability for your area of interest!</p>
 
     <br>
     <h5>Daily JRC-TIP eLAI, March 22, 2021</h5>
-    <a href="https://www.youtube.com/watch?v=4dRBEW4uw9M" target="_blank"><img src="./img/elai.png" alt="JRC-TIP eLAI" width="400"></a>
+    <a href="https://www.youtube.com/watch?v=4dRBEW4uw9M" target="_blank"><img src="./img/elai.png" alt="JRC-TIP eLAI" width="100%"></a>
     <p>The effective Leaf Area Index using the Joint Research Centre's Two-Stream Inversion package, that we rewrote in Julia, enabling the use of Julia's handy auto-derivation tools for fast optimization. Contact us for data availability and any further details that you may be interested in.</p>
 
     <br>
     <h2>Generating virtual landscapes</h2>
     <h5>A small Python functionality to generate pleasing landscape patterns, March 23, 2021</h5>
-    <img src="./img/lg.png" alt="Landscape generation" width="400"></a>
+    <img src="./img/lg.png" alt="Landscape generation" width="100%"></a>
     <p>To advance the study of spectral mixing and the potential of imaging spectroscopy to assess biodiversity, we developed a small yet handy landscape generator that produces species compositions on a two-dimensional map, including understorey and overstorey vegetation. You can find an application in our recent paper in Remote Sensing of Environment (<a href="https://doi.org/10.1016/j.rse.2021.112405">https://doi.org/10.1016/j.rse.2021.112405</a>) and we will release this code on GitHub soon. In the meantime, please, contact us if you are interested.</p>
 
   </div>
