--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ body {
 @media screen and (max-width: 700px) {
   .row {   
     flex-direction: column;
-    max-width: 100%;
+    width: 100%;
   }
   .header {
     padding: 20px;
