--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ body {
     <h2>Data assimilation</h2>
     <h5>Daily bi-hemispherical reflectance in the near-infrared, March 20, 2021</h5>
     <a href="https://www.youtube.com/watch?v=ZveP5Kt2Y3U" target="_blank"><img src="./img/albedo.png" alt="MODIS NIR albedo" width="100%"></a>
-    <p>Check out or daily MODIS albedo product. This product comes with associated confidence intervals and we have derived a suite of vegetation products from it, using the Joint Research Centre's Two-Stream Inversion package. Contact us for data availability for your area of interest!</p>
+    <p>Check out our daily MODIS albedo product. This product comes with associated confidence intervals and we have derived a suite of vegetation products from it, using the Joint Research Centre's Two-Stream Inversion package. Contact us for data availability for your area of interest!</p>
 
     <br>
     <h5>Daily JRC-TIP eLAI, March 22, 2021</h5>
