--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ body {
     <h2>Generating virtual landscapes</h2>
     <h5>A small Python functionality to generate pleasing landscape patterns, March 23, 2021</h5>
     <img src="./img/lg.png" alt="Landscape generation" width="100%"></a>
-    <p>To advance the study of spectral mixing and the potential of imaging spectroscopy to assess biodiversity, we developed a small yet handy landscape generator that produces species compositions on a two-dimensional map, including understorey and overstorey vegetation. You can find an application in our recent paper in Remote Sensing of Environment (<a href="https://doi.org/10.1016/j.rse.2021.112405">https://doi.org/10.1016/j.rse.2021.112405</a>) and we will release this code on GitHub soon. In the meantime, please, contact us if you are interested.</p>
+    <p>To advance the study of spectral mixing and the potential of imaging spectroscopy to assess biodiversity, we developed a small yet handy landscape generator that produces species compositions on a two-dimensional map, including understorey and overstorey vegetation. You can find an application in our recent paper in Remote Sensing of Environment (<a href="https://doi.org/10.1016/j.rse.2021.112405" target="_blank">https://doi.org/10.1016/j.rse.2021.112405</a>) and we will release this code on GitHub soon. In the meantime, please, contact us if you are interested.</p>
 
   </div>
 </div>
