--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Mondoscope</title>
+<title>Van Leeuwen Imaging</title>
 <link rel="icon" 
       type="image/ico" 
       href="./img/mondoscope.ico">
@@ -153,7 +153,7 @@ body {
 </div>
 
 <div class="footer">
-  <p>Mondoscope 2021</p>
+  <p>Van Leeuwen Imaging 2021</p>
 </div>
 
 </body>
